--- a/scss/style.css
+++ b/scss/style.css
@@ -611,7 +611,7 @@ main .about .colsConatinerSectionOn .colSection-two .btnHistory a:hover {
   border: 2px solid #004DA6;
 }
 main .services {
-  padding: 100px 0 150px 0;
+  padding: 100px 0 80px 0;
 }
 main .services .titleSection {
   padding-bottom: 80px;
@@ -693,6 +693,27 @@ main .services .service--cards .card--item .card--button a:hover {
 }
 main .services .service--cards .card--item .card--button span i {
   color: #00ADEF;
+}
+main .galery {
+  margin: 100px 0;
+}
+main .galery .galeryContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+main .galery .galeryContainer .video-item {
+  position: relative;
+  width: 100%;
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 10px;
+  overflow: hidden;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+  border-radius: 15px;
 }
 main .faixaCTA {
   background-color: #004DA6;
