--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -421,7 +421,6 @@ main {
     .slider2 {
       width: 100%;
       height: 400px;
-      // padding: 0 10px;
       overflow: hidden;
 
       .slides2 {
@@ -438,14 +437,15 @@ main {
 
         .slide2 {
           position: relative;
-          box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
           width: 7.8%;
           height: 350px;
-          padding: 30px;
-          // gap: 15px;
           margin: 10px;
           transition: 2s;
+          text-align: center;
 
+          img{
+            width: 200px;
+          }
           .slide-img {
             img {
               width: 80px;
