--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -355,14 +355,17 @@ main {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
+      align-content: space-between;
       gap: 20px;
+      
       .video-item {
         // background-color: red;
         position: relative;
-        width: 100%;
-        max-width: 300px;
+        width: 300px;
+        // max-width: 300px;
+        flex-grow: 1;
         margin: 0 auto;
         padding: 20px;
         overflow: hidden;
