--- a/scss/style.css
+++ b/scss/style.css
@@ -722,17 +722,17 @@ main .galery .galeryContainer .video-item {
   border-radius: 15px;
 }
 main .faixaCTA {
-  background-color: #004DA6;
+  background-color: #00ADEF;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px 0;
-  margin-bottom: 150px;
+  padding: 50px 0;
+  margin: 150px 0;
   gap: 50px;
   width: 100vw;
   margin-left: calc(50% - 50vw);
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 main .faixaCTA .containerCTA {
   display: flex;
@@ -746,9 +746,10 @@ main .faixaCTA h2 {
   font-weight: 500;
 }
 main .faixaCTA a {
-  color: #00ADEF;
+  color: #004DA6;
   display: flex;
   font-size: 1rem;
+  font-weight: 700;
 }
 main .faixaCTA a i {
   font-size: 1.5rem;
